Adding github link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Movies Website</h1>
         <div class="movieswebsite-contact-container">
           <img src="img/github.svg" alt="Github Repository" />
-          <a href="">/Movies Website Git Repository</a>
+          <a href="https://github.com/IagoSilvaSantos">/Movies Website Git Repository</a>
         </div>
       </nav>
     </header>
